specs/opset/ai.onnx/v23/attention.md
---
op: Attention
domain: ai.onnx
since_version: 23
type_constraints:
- name: T1
  doc: Constrain Q and K inputs types to float tensors.
  allowed:
  - tensor(bfloat16)
  - tensor(double)
  - tensor(float)
  - tensor(float16)
- name: T2
  doc: Constrain V input types to float tensors.
  allowed:
  - tensor(bfloat16)
  - tensor(double)
  - tensor(float)
  - tensor(float16)
- name: U
  doc: Constrain output 'mask' types to boolean tensors and input types.
  allowed:
  - tensor(bfloat16)
  - tensor(bool)
  - tensor(double)
  - tensor(float)
  - tensor(float16)
  - tensor(int16)
  - tensor(int32)
  - tensor(int64)
  - tensor(int8)
  - tensor(uint16)
  - tensor(uint32)
  - tensor(uint64)
  - tensor(uint8)
inputs:
- name: Q
  type: T1
  doc: Query tensor. 4D tensor with shape `(batch_size, q_num_heads, q_sequence_length,
    head_size)` or 3D tensor with shape `(batch_size, q_sequence_length, q_hidden_size)`.
    For cases with a 3D input tensor, `q_hidden_size = q_num_heads * head_size`
- name: K
  type: T1
  doc: Key tensor. 4D tensor with shape `(batch_size, kv_num_heads, kv_sequence_length,
    head_size)` or 3D tensor with shape `(batch_size, kv_sequence_length, k_hidden_size)`.
    For cases with a 3D input tensor, `k_hidden_size = kv_num_heads * head_size`
- name: V
  type: T2
  doc: Value tensor. 4D tensor with shape `(batch_size, kv_num_heads, kv_sequence_length,
    v_head_size)` or 3D tensor with shape `(batch_size, kv_sequence_length, v_hidden_size)`.
    For cases with a 3D input tensor, `v_hidden_size = kv_num_heads * v_head_size`
- name: attn_mask
  type: U
  doc: Attention mask. Shape must be broadcastable to 4D tensor with shape `(batch_size,
    q_num_heads, q_sequence_length, total_sequence_length)` where `total_sequence_length
    = past_sequence_length + kv_sequence_length.` Two types of masks are supported.
    A boolean mask where a value of `True` indicates that the element should take
    part in attention. Also supports a float mask of the same type as query, key,
    value that is added to the attention score.
  kind: Option
- name: past_key
  type: T1
  doc: past state cache for key with shape `(batch_size, kv_num_heads, past_sequence_length,
    head_size)`
  kind: Option
- name: past_value
  type: T2
  doc: past state cache for value with shape `(batch_size, kv_num_heads, past_sequence_length,
    v_head_size)`
  kind: Option
outputs:
- name: Y
  type: T1
  doc: The output tensor . 4D tensor with shape `(batch_size, q_num_heads, q_sequence_length,
    v_head_size)` or 3D tensor with shape `(batch_size, q_sequence_length, hidden_size)`.
    For cases with a 3D input tensor, `hidden_size = q_num_heads * v_head_size`
- name: present_key
  type: T1
  doc: Updated key cache with shape `(batch_size, kv_num_heads, total_sequence_length,
    head_size)` where `total_sequence_length = past_sequence_length + kv_sequence_length`.
  kind: Option
- name: present_value
  type: T2
  doc: Updated value cache with shape `(batch_size, kv_num_heads, total_sequence_length,
    v_head_size)` where `total_sequence_length = past_sequence_length + kv_sequence_length`.
  kind: Option
- name: qk_matmul_output
  type: T1
  doc: The output of QK matmul. 4D tensor with shape `(batch_size, q_num_heads, q_sequence_length,
    total_sequence_length)` where `total_sequence_length = past_sequence_length +
    kv_sequence_length`.
  kind: Option
attributes:
- name: is_causal
  type: int
  doc: If set to `1`, the attention masking is a lower triangular matrix when the
    mask is a square matrix. The attention masking has the form of the upper left
    causal bias due to the alignment.
  required: false
  default: 0
- name: kv_num_heads
  type: int
  doc: 'Number of heads of key and value. Must be used with 3D inputs of Q, K and
    V. '
  required: false
- name: q_num_heads
  type: int
  doc: 'Number of heads of query. Must be used with 3D inputs of Q, K and V. '
  required: false
- name: qk_matmul_output_mode
  type: int
  doc: If set to `0`, qk_matmul_output is the output of qk matmul. If set to `1`,
    qk_matmul_output is the output after the softcap operation (before mask addition).
    If set to `2`, qk_matmul_output includes the attention mask and softcap (if provided)
    applied to the output of qk matmul. If set to `3`, qk_matmul_output is the output
    after the softmax operation. Default value is 0.
  required: false
  default: 0
- name: scale
  type: float
  doc: Scaling factor applied to $Q*K^T$. Default value is `1/sqrt(head_size)`. To
    prevent [numerical overflow](https://tinyurl.com/sudb9s96), scale `Q`, `K` by
    `sqrt(scale)` before matmul.
  required: false
- name: softcap
  type: float
  doc: Softcap value for attention weights. Default value is 0.
  required: false
  default: 0.0
- name: softmax_precision
  type: int
  doc: The floating-point precision used in softmax computation. If softmax precision
    is not provided, the same precision as the input of softmax (Q and K) is used.
  required: false
---

Computes scaled dot product attention on query, key and value tensors, using an optional attention mask if passed.

This operator covers self and cross variants of the attention operation based on sequence lengths of K, Q and V.

For self attention, `kv_sequence_length` equals to `q_sequence_length`.

For cross attention, query and key might have different lengths.

This operator also covers the 3 following variants based on the number of heads:
1) Multi-headed Attention (MHA): Described in the paper https://arxiv.org/pdf/1706.03762, `q_num_heads = kv_num_heads`.
2) Group-query Attention (GQA): Described in the paper https://arxiv.org/pdf/2305.13245, `q_num_heads > kv_num_heads`, `q_num_heads % kv_num_heads == 0`.
3) Multi-query Attention (MQA): Described in the paper https://arxiv.org/pdf/1911.02150, `q_num_heads > kv_num_heads`, `kv_num_heads=1`.

Attention bias to be added is calculated based on `attn_mask` input and `is_causal attribute`, only one of which can be provided.
1) If `is_causal` is set to `1`, the attention masking is a lower triangular matrix when the mask is a square matrix. The attention masking has the form of the upper left causal bias due to the alignment.
2) `attn_mask`: A boolean mask where a value of `True` indicates that the element should take part in attention or a float mask of the same type as query, key, value that is added to the attention score.

Both past and present state key/values are optional. They shall be used together, and not allowed to use only one of them.
The following pattern is applied to the Q, K and V inputs after appropriate reshaping of K and V inputs based on sequence lengths and num heads provided:

```
  The following pattern is applied by this operator:
      Q          K          V
      |          |          |
Q*sqrt(scale) K*sqrt(scale) |
      |          |          |
      |       Transpose     |
      |          |          |
      ---MatMul---          |
            |               |
  softcap (if provided)     |
            |               |
 at_mask---Add              |
            |               |
         Softmax            |
            |               |
            -----MatMul------
                   |
                   Y
```
